2004-11-01  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/filter.cc (filter (MArray<T>&, MArray<T>&,
	MArrayN<T>&, MArrayN<T>&, int)): The variable si is now at least 2-D.
	(Ffilter): Force si to be 2-D, while allowing arbitrary vector
	orientation.

2004-11-01  John W. Eaton  <jwe@octave.org>

	* data.cc (INSTANTIATE_EYE): New macro.  Use it to instantiate
	identity matrix functions for various matrix types.

	* variables.cc (do_who): Fix typo in for loop.

2004-10-28  John W. Eaton  <jwe@octave.org>

	* ls-mat5.cc (save_mat5_binary_element): Save structure elements
	in correct order.

2004-10-26  John W. Eaton  <jwe@octave.org>

	* ov-fcn.h (octave_function::octave_va_arg): No longer const.

2004-10-22  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/filter.cc: Remove some unnecessary parens.

2004-10-22  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/filter.cc (filter (MArray<T>&, MArray<T>&,
	MArrayN<T>&, MArrayN<T>&, int)): If value to filter is
	dimensionality 2 it might still be a vector, use special case.

2004-10-21  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (INT_CONV_METHOD): Apply saturation semantics here too.

2004-10-19  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::write): New function.

2004-10-18  John W. Eaton  <jwe@octave.org>

	* symtab.cc (symbol_record::dimensions_string_req_first_space,
	symbol_record::make_dimensions_string): Use dims() for all objects.

2004-10-18  Oyvind Kristiansen  <oyvinkri@stud.ntnu.no>

	* symtab.cc (symbol_table::parse_whos_line_format): Handle
	size-of-parameter and center-specific format specifiers.

2004-10-18  John W. Eaton  <jwe@octave.org>

	* pt-plot.cc (handle_plot_data): If plotting data from file,
	always use "using" clause.

2004-10-12  David Bateman  <dbateman@free.fr>

	* pt-mat.cc (tm_row_const::tm_row_const_rep::do_init_element,
	tm_const::init): Dimensionality of matrices not necessarily the
	same.  Check before comparing.

2004-10-06  John W. Eaton  <jwe@octave.org>
