@@ -546,7 +546,9 @@ read_hdf5_data (std::istream& is, const std::string& /* filename */,
 
 #ifdef HAVE_H5GGET_NUM_OBJS
   hsize_t num_obj = 0;
-  H5Gget_num_objs (hs.file_id, &num_obj);
+  hid_t group_id = H5Gopen (hs.file_id, "/"); 
+  H5Gget_num_objs (group_id, &num_obj);
+  H5Gclose (group_id);
   if (hs.current_item < static_cast<int> (num_obj))
 #endif
     H5Giterate_retval = H5Giterate (hs.file_id, "/", &hs.current_item,
